[package]
name = "govis"
version = "0.1.0"
edition = "2024"

[dependencies]
generic-ec = { version = "0.5.0", features = ["curve-secp256k1", "udigest"] }
rand_core = { version = "0.6.4", features = ["std"] }
round-based = { version = "0.4.1", features = ["derive"] }
serde = { version = "1.0.228", features= ["derive"] }
sha2 = "0.10.9"
udigest = { version = "0.2.4", features = ["derive"] }
