[package]
name = "govis"
version = "0.1.0"
description = "Threshold ECDSA implementation with CGGMP21 and Lindell signing protocols and multi-party CLI"
license = "GPL-3.0"
repository = "https://github.com/theroguevigilante/govis"
readme = "README.md"
edition = "2024"

[dependencies]
generic-ec = { version = "0.5.0", features = ["curve-secp256k1", "udigest"] }
rand_core = { version = "0.6.4", features = ["std"] }
round-based = { version = "0.5.0-alpha.1", features = ["derive", "sim"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
rand = "0.8"
num-bigint = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
num-integer = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
bincode = "1.3"
hex = "0.4"
num-primes = "0.3"
